# adventofcode2020

./: CMakeLists.txt  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
